--- a/Assets/style.css
+++ b/Assets/style.css
@@ -214,7 +214,8 @@ border: 1px solid green;
     justify-content: center;
 }
 .allcont1{
-    background: gainsboro;
+    background:rgba(0, 0, 245, 0.705);
+    border: 5px solid whitesmoke;
 }
 
 .check-but{
@@ -245,7 +246,7 @@ color: black;
 margin-top: 2%;
 font-size: 13px;
 padding:5px;  
-background-color:white;  
+background-color:greenyellow;  
 text-align: center;
 }
 .ho{
