--- a/Assets-log/style.css
+++ b/Assets-log/style.css
@@ -89,33 +89,39 @@ nav{
     margin-top: 1%;
 }
 .but_divv button{
-    width: 45%;
+    width: auto;
+    padding: 5px;
     border-radius: 5px;
 }
 #nm{
     background:rgba(169, 169, 169, 0.103);
-    font-size: 10px;
+    font-size: 20px;
     color: rgb(0, 0, 0);
+    letter-spacing: 5px;
     font-weight: lighter;
 }
 #mk{
     background:rgba(169, 169, 169, 0.103);
-    font-size: 10px;
+    font-size: 20px;
     color: rgb(0, 0, 0);
+    letter-spacing: 5px;
     font-weight: lighter;
 }
 
 #nm:hover{
     background:rgba(169, 169, 169, 0.603);
-    font-size: 10px;
+    font-size: 20px;
     color: rgb(0, 0, 0);
     font-weight: lighter;
+    letter-spacing: 15px;
 }
 #mk:hover{
     background:rgba(169, 169, 169, 0.603);
-    font-size: 10px;
+    font-size: 20px;
     color: rgb(0, 0, 0);
     font-weight: lighter;
+    letter-spacing: 15px;
+
 }
 
 #ml{
@@ -123,7 +129,7 @@ nav{
     box-shadow: 0px 3px 0px 0px rgba(0, 0, 255, 0.705);
     border: none;
     height: 7vh;
-    font-size: 12px;
+    font-size: 22px;
 }
 
 #ml:hover{
